Improve the protocol we use to communicate between the config and the job

It wasn't doing so well when the payload exceeded a certain amount, now we
send first the size and wait to read for what is necessary.

Thanks to harald for contributing most of the patch!

BUG: 362975